--- a/Ghini-Bikes/Ghini-Bikes Presentation.csproj
+++ b/Ghini-Bikes/Ghini-Bikes Presentation.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <Folder Include="Pictures\" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+	  <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
