Implemented structural patterns ( proxy, facade, decorator)

--- a/Ghini-Bikes/Ghini-Bikes Presentation.csproj
+++ b/Ghini-Bikes/Ghini-Bikes Presentation.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <Folder Include="Pictures\" />
     <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	  <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
