--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -11,12 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Orders\Commands\" />
-    <Folder Include="Orders\Queries\" />
-    <Folder Include="Products\Commands\" />
-    <Folder Include="Products\Queries\" />
-    <Folder Include="Users\Commands\" />
-    <Folder Include="Users\Queries\" />
+	  <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+	  <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
