--- a/Ghini-Bikes/Ghini-Bikes Presentation.csproj
+++ b/Ghini-Bikes/Ghini-Bikes Presentation.csproj
@@ -8,11 +8,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		 <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+	</ItemGroup>
+	
   <ItemGroup>
     <Folder Include="Pictures\" />
-    <PackageReference Include="MediatR" Version="9.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+	 
 	  <ProjectReference Include="..\Domain\Domain.csproj" />
+	  <ProjectReference Include="..\Application\Application.csproj" />
+	  <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
