--- a/Ghini-Bikes/Ghini-Bikes Presentation.csproj
+++ b/Ghini-Bikes/Ghini-Bikes Presentation.csproj
@@ -10,7 +10,17 @@
 
 	<ItemGroup>
 		 <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
+		 <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+		 <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
+		   <PrivateAssets>all</PrivateAssets>
+		   <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		 </PackageReference>
+		 <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
+		 <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4">
+		   <PrivateAssets>all</PrivateAssets>
+		   <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		 </PackageReference>
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0.0" />
 	</ItemGroup>
 	
   <ItemGroup>
