--- a/Ghini-Bikes/Ghini-Bikes Presentation.csproj
+++ b/Ghini-Bikes/Ghini-Bikes Presentation.csproj
@@ -21,6 +21,7 @@
 		   <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		 </PackageReference>
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0.0" />
+	  <PackageReference Include="XAct.Core.PCL" Version="0.0.5014" />
 	</ItemGroup>
 	
   <ItemGroup>
