--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -6,7 +6,13 @@
     }
   },
   "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "DhftOS5uphK3vmCJQrexST1RsyjZBjXWRgJMFPU4",
+    "Issuer": "localhost:7155",
+    "Audience": "localhost:7155",
+    "ExpirationInDays": 2
+  },
   "ConnectionStrings": {
-    "Defult": "Server=DESKTOP-C8L0AG5\\LUCHI;Database=GhiniBikes;Trusted_Connection=True"
+    "Default": "Server=DESKTOP-C8L0AG5\\LUCHI;Database=GhiniBikes;Trusted_Connection=True"
   }
 }
