--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,20 @@ sites/site*/public/theme/
 textpattern/
 HISTORY.txt
 README.txt
+.idea/
+.vscode/
+node_modules/
+build
+.DS_Store
+*.tgz
+my-app*
+template/src/__tests__/__snapshots__/
+lerna-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.changelog
+yarn.lock
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio
