--- a/ghini_fe/package.json
+++ b/ghini_fe/package.json
@@ -16,6 +16,8 @@
     "@types/react-dom": "^18.0.3",
     "axios": "^0.27.2",
     "react": "^18.1.0",
+    "react-client-session": "0.0.8",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.1",
     "react-router-dom": "^6.3.0",
