--- a/ghini_fe/package.json
+++ b/ghini_fe/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "axios": "^0.27.2",
+    "axios-react": "^2.0.8",
     "react": "^18.1.0",
     "react-client-session": "0.0.8",
     "react-cookie": "^4.1.1",
