--- a/ghini_fe/package.json
+++ b/ghini_fe/package.json
@@ -11,6 +11,7 @@
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "latest",
     "@mui/material": "^5.8.2",
+    "@mui/x-data-grid": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
